--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,11 +7,12 @@ name = "ilqr"
 version = "0.1.0"
 description = "JAX-based iLQR (iterative Linear Quadratic Regulator) solver"
 readme = "README.md"
-requires-python = ">=3.8"
+requires-python = ">=3.10"
 dependencies = [
-    "jax>=0.4.0",
-    "jaxlib>=0.4.0",
-    "matplotlib>=3.5.0",
+    "jax[cuda12_pip]>=0.6.0",
+    "numpy>=2.0.0,<3.0.0",
+    "matplotlib>=3.9.0",
+    "scipy>=1.10.0",
 ]
 
 [project.optional-dependencies]
