--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,32 @@
-jax>=0.4.0
-jaxlib>=0.4.0
-matplotlib>=3.5.0
-pytest>=7.0
-pytest-cov>=4.0
+# =============================================================================
+# iLQR Solver Dependencies
+# =============================================================================
+# Python version: 3.10+
+#
+# This requirements file installs JAX with CUDA 12 GPU support by default.
+# The versions below match the tested environment.
+#
+# CUDA Compatibility Notes:
+# - CUDA 12.x: Use jax[cuda12] (default below)
+# - CUDA 11.x: Use jax[cuda11_pip] instead
+# - CPU only: Use jax without CUDA extras
+#
+# If JAX installation fails, check your CUDA version:
+#   nvidia-smi  # Shows CUDA driver version
+#
+# Then install manually:
+#   pip install -U "jax[cuda12_pip]"  # For CUDA 12.x
+#   pip install -U "jax[cuda11_pip]"  # For CUDA 11.x
+#   pip install -U jax jaxlib          # For CPU only
+# =============================================================================
+
+# Core dependencies with GPU support (CUDA 12)
+jax[cuda12_pip]==0.6.2
+numpy>=2.0.0,<3.0.0
+matplotlib>=3.9.0
+scipy>=1.10.0
+
+# Development dependencies (optional)
+# Uncomment to install:
+# pytest>=7.0
+# pytest-cov>=4.0
