--- a/.gitignore
+++ b/.gitignore
@@ -1,44 +1,15 @@
-# Python
+# Build
 __pycache__/
-*.py[cod]
-*$py.class
-*.so
-.Python
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
 *.egg-info/
-.installed.cfg
-*.egg
+build/
+dist/
 
-# Virtual environments
+# Virtual environment
 venv/
-env/
-ENV/
 
-# IDEs
+# IDE
 .vscode/
 .idea/
-*.swp
-*.swo
-*~
 
-# Testing
-.pytest_cache/
-.coverage
-htmlcov/
-
-# Jupyter
-.ipynb_checkpoints
-
-# Generated files (uncomment if you don't want to commit figures)
+# Optional: Uncomment to ignore generated plots
 # figures/*.png
